
/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java-library'
    id 'maven-publish'
    id "au.com.dius.pact" version "4.3.10"
    id 'project-report'
}

group = 'me.sonam'
version = '1.0-SNAPSHOT'
description = 'role-rest-service'
java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation'org.springframework.boot:spring-boot-starter-webflux'
    implementation'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-all:3.0.3'
    implementation'org.springframework.boot:spring-boot-starter-security'
    testImplementation ('org.springframework.boot:spring-boot-starter-test') {
        exclude (group: 'com.vaadin.external.google', module: 'android-json')
    }
    implementation'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
    implementation'org.postgresql:postgresql:42.6.0'
    implementation'me.sonam:token-filter:1.0.2-SNAPSHOT'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.6'
    implementation'io.projectreactor:reactor-test'
    testImplementation 'io.r2dbc:r2dbc-h2:1.0.0.RELEASE'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'au.com.dius:pact-jvm-consumer-junit5:4.0.10'
    testImplementation 'au.com.dius:pact-jvm-provider-junit5:4.0.10'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.0.1'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven {
        url = uri("https://maven.pkg.github.com/sonamsamdupkhangsar/token-filter")
        credentials {
            username = System.getenv("USERNAME")
            password = System.getenv("PERSONAL_ACCESS_TOKEN")
        }
    }
}
ext {
    set('springCloudVersion', "2022.0.3")
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}

test {
    filter {
        //include all tests from package
        includeTestsMatching "me.sonam.authentication"

        //include all integration tests
        includeTestsMatching "*Test*"
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/sonamsamdupkhangsar/user-rest-service"
            credentials {
                username = System.getenv("USERNAME")
                password = System.getenv("PERSONAL_ACCESS_TOKEN")
            }
        }
    }
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

pact {
    publish {
        pactBrokerUrl = System.getenv('pactbrokerurl')
        pactBrokerUsername = System.getenv('pactbrokerusername')
        pactBrokerPassword = System.getenv('pactbrokerpassword')
    }
}
htmlDependencyReport{
    projects = project.allprojects
}
